add datatable wedget
add datatable wedget

--- a/src/skins/alibaba_font/demo_fontclass.html
+++ b/src/skins/alibaba_font/demo_fontclass.html
@@ -55,6 +55,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont alibaba-pdf"></i>
+                    <div class="name">pdf</div>
+                    <div class="fontclass">.alibaba-pdf</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont alibaba-copy"></i>
                     <div class="name">copy</div>
                     <div class="fontclass">.alibaba-copy</div>
