--- a/src/skins/alibaba_font/demo_symbol.html
+++ b/src/skins/alibaba_font/demo_symbol.html
@@ -85,6 +85,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#alibaba-pdf"></use>
+                    </svg>
+                    <div class="name">pdf</div>
+                    <div class="fontclass">#alibaba-pdf</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#alibaba-copy"></use>
                     </svg>
                     <div class="name">copy</div>
