--- a/src/skins/alibaba_font/demo_unicode.html
+++ b/src/skins/alibaba_font/demo_unicode.html
@@ -75,6 +75,12 @@
                 </li>
             
                 <li>
+                <i class="icon iconfont">&#xe740;</i>
+                    <div class="name">pdf</div>
+                    <div class="code">&amp;#xe740;</div>
+                </li>
+            
+                <li>
                 <i class="icon iconfont">&#xe744;</i>
                     <div class="name">copy</div>
                     <div class="code">&amp;#xe744;</div>
