add role grant dialog
add role grant dialog

--- a/src/msm/designer/index.html
+++ b/src/msm/designer/index.html
@@ -5,13 +5,13 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel='icon' href='../favicon.ico' type=image/x-icon />
+  <link rel='icon' href='../../skins/favicon.ico' type=image/x-icon />
   <title>ZTE MSM</title>
   <style>
     .loading-indicator {
       height: 100px;
       width: 300px;
-      background: url(../loading-bars.gif);
+      background: url(../../skins/loading-bars.gif);
       background-repeat: no-repeat;
       background-position: center center;
     }
